--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
-    "fastapi[standard] (>=0.121.2,<0.122.0)"
+    "fastapi[standard] (>=0.121.2,<0.122.0)",
+    "argon2-cffi (>=25.1.0,<26.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "alembic (>=1.17.2,<2.0.0)",
+    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
+    "pyshorteners (>=1.0.1,<2.0.0)",
+    "pydantic-settings (>=2.12.0,<3.0.0)"
 ]
 
 
@@ -52,5 +58,5 @@ pre_format = 'ruff check --fix'
 format = 'ruff format'
 run = 'fastapi dev app/main.py'
 pre_test = 'task lint'
-test = 'pytest -s -x --cov=fast_api -vv'
+test = 'pytest -s -x --cov=app -vv'
 post_test = 'coverage html'
