--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "alembic (>=1.17.2,<2.0.0)",
     "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
     "pyshorteners (>=1.0.1,<2.0.0)",
-    "pydantic-settings (>=2.12.0,<3.0.0)"
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "hashids (>=1.3.1,<2.0.0)"
 ]
 
 
