--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
     "pyshorteners (>=1.0.1,<2.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
-    "hashids (>=1.3.1,<2.0.0)"
+    "hashids (>=1.3.1,<2.0.0)",
 ]
 
 
